Second Build - fixed fonts

--- a/skills.html
+++ b/skills.html
@@ -51,7 +51,7 @@
             </div>
         </nav>
 
-        <div class="jumbotron">
+        <div class="jumbotron noMargin">
             <div class="container">
                 <h3>Summary</h3><br />
                 <h4>Programming languages</h4>
@@ -222,7 +222,7 @@ Basic / Familiar
         </div>
 
 
-        <div id="C_Cpp" class="carousel slide" data-ride="carousel">
+        <div id="C_Cpp" class="carousel slide noMargin" data-ride="carousel">
             <!-- Indicators -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
@@ -243,11 +243,11 @@ Basic / Familiar
             </div>
         </div>
 
-        <div id="Csharp" class="carousel slide" data-ride="carousel">
+        <div id="Csharp" class="carousel slide noMargin" data-ride="carousel">
             <!-- Indicators -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="./resources/images/ca_blue.png" alt="Second slide">
+                    <img src="./resources/images/ca_gray.png" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>C# and .NET Framework</h1>
