--- a/skills.html
+++ b/skills.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)http://getbootstrap.com/examples/carousel/ -->
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Adrian Bece's work portfolio - C#, C++, HTML, CSS, Javascript, PHP, Javascript">
+        <meta name="description" content="Adrian Bece's portfolio - Codes and Designs. Programming languages: C, C++, C#, .NET, HTML, CSS, PHP, Javascript, JQuery, Bootstrap, Matlab, VHDL, Step7, Computer vision, Robotics, Wireframing, etc. Graphic designs and animations in Photoshop.">
         <meta name="author" content="Adrian Bece">
         <link rel="icon" href="./resources/images/ca_icon.png">
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
-        <!-- Bootstrap core CSS -->
         <link href="./bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
-        <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-        <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
         <script src="./index_files/ie-emulation-modes-warning.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="./bootstrap-3.3.2-dist/js/menuHideShow.js"></script>
         <style type="text/css"></style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-                    <!--[if lt IE 9]>
-                                                                                                                                          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-                                                                                                                                          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-                                                                                                                                        <![endif]-->
-        <!-- Custom styles for this template -->
+        <!--[if lt IE 9]><script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script><script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
     </head>
-            <!-- NAVBAR
-                                                                                        ================================================== -->
+
+    <!-- ---------- NAVBAR ----------  -->
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
@@ -53,13 +45,16 @@
             </div>
         </nav>
 
-        <div class="jumbotron noMargin">
-            <div class="container"><br/>
+        <!-- ------------- NAVBAR END ----------------  -->
+        <div class="jumbotron noMargin jumbotron_skills">
+            <div class="container">
+                <h3 class="centered">Skills Summary</h3>
+                <hr class="hr_gray">
                 <h5 id="proLang">Programming languages &nbsp<span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></h5>
                 <div class="list-group" id="proLang_group">
                     <div class="row">
                         <div class="col-md-4">
-                            <h5><a href="#C_Cpp">C / C++</a></h5>
+                            <h5><a id="a_C_Cpp">C and C++</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
  Highly Profficient / Expert
@@ -68,7 +63,7 @@
                         </div>
 
                         <div class="col-md-4">
-                            <h5><a href="#Csharp">C# and .NET Framework</a></h5>
+                            <h5><a id="a_Csharp">C# and .NET Framework</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
  Highly Profficient / Expert
@@ -76,7 +71,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <h5><a href="#">HTML and CSS</a></h5>
+                            <h5><a id="a_HTML_CSS">HTML and CSS</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
  Highly Profficient / Expert
@@ -142,7 +137,8 @@
             </div>
 
             <div class="container">
-                <h5 id="proLangRel">Programming-related skills &nbsp<span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></h5>
+                <hr class="hr_gray">
+                <h5 id="proLangRel">Programming-related skills &nbsp<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
                 <div class="list-group" id="proLangRel_group">
                     <div class="row">
                         <div class="col-md-4">
@@ -175,8 +171,9 @@ Familiar
                 </div>
             </div>
 
-             <div class="container">
-                <h5 id="techSkills">Other Technical Skills &nbsp<span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></h5>
+            <div class="container">
+                <hr class="hr_gray">
+                <h5 id="techSkills">Other Technical Skills &nbsp<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
                 <div class="list-group" id="techSkills_group">
                     <div class="row">
                         <div class="col-md-4">
@@ -208,17 +205,21 @@ Basic / Familiar
                     </div>
                 </div>
             </div>
-
-
             <div class="container" id="otherSkills">
-                <h5>Other skills &nbsp<span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></h5>
+                <hr class="hr_gray">
+                <h5>Other skills &nbsp<span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></h5>
                 <div class="list-group" id="otherSkills_group">
                     <div class="row">
-                        <b>
-                        Basic Leadership skills, Cooperation and teamwork skills, Highly motivated for work and learning new skills, Familiar with economics and project management, Good soft-skills and presentation skills.
-                        </b>
+                        <ul>
+                            <li><b>Basic leadership skills</b></li>
+                            <li><b>Cooperation and teamwork skills</b></li>
+                            <li><b>Highly motivated for work and learning new skills</b></li>
+                            <li><b>Familiar with economics and project management</b></li>
+                            <li><b>Good soft-skills and presentation skills</b></li>
+                        </ul>
                     </div>
                 </div>
+                <hr class="hr_gray">
             </div>
         </div>
 
@@ -230,14 +231,15 @@ Basic / Familiar
                     <img src="./resources/images/ca_blue.png" alt="Second slide">
                     <div class="container">
                         <div class="carousel-caption">
-                            <h1>C / C++</h1>
-                            <p>I am highly familiar with C / C++ programming language. I've been studying it since highschool. I've used it mostly during my education for doing homework and lab reports. Currently, I am writing a student handbook on programming in C / C++ for Faculty Of Electric Engineering in Osijek.
+                            <h1>C and C++</h1>
+                            <h5>Highly profficient / Expert</h5>
+                            <p>I am highly familiar with C / C++ programming language. I've been studying it since highschool. I've used it mostly during my education for doing homework and lab reports for writing code ranging from simple to moderately complex. Currently, I am writing a student handbook on programming in C / C++ and Windows Forms C# for Faculty Of Electric Engineering in Osijek.
                             </p>
                             <p>
-                                <b>Knowledge span: </b>Basic syntax and semantics, Data types, Inputs and outputs, Loops, Decision-making, Various sorting algorithms, Threading, File input / output, Object-oriented programming (Classes, objects, inheritance, overloading), etc.
+                                <b>Knowledge span: </b>Basic syntax and semantics, Data types, Inputs and outputs, Loops, Decision-making, Various algorithms, Threading, File input / output, Object-oriented programming (Classes, objects, inheritance, overloading), etc.
                             </p>
 
-                            <p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com/examples/carousel/#" role="button">My C / C++ projects</a></p>
+                            <p><a class="btn btn-lg btn-primary btn-block" href="http://getbootstrap.com/examples/carousel/#" role="button">My C / C++ projects</a></p>
                         </div>
                     </div>
                 </div>
@@ -252,13 +254,36 @@ Basic / Familiar
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>C# and .NET Framework</h1>
-                            <p>I am highly familiar with C# programming language and I am profficient with .NET framework. I've been studying it since 2013. I've used it to create both simple and complex desktop applications, for example: IP camera manager, application for my project "Foodly", histogram-based image search application, Image to ASCII art converter, etc.
+                            <h5>Highly profficient / Expert</h5>
+                            <p>I am highly familiar with C# programming language and I am profficient with .NET framework. I've been studying it since 2013. I've used it to create both simple and complex desktop applications, for example: IP camera manager, application for my project "Foodly", histogram-based image search application, etc.
                             </p>
                             <p>
-                                <b>Knowledge span: </b>Basic syntax and semantics, Data types, Inputs and outputs, Loops, Decision-making, Various sorting, Multi-threading, Parallel computing, Windows Forms Applications, working with multimedia (images, videos and sounds) etc.
+                                <b>Knowledge span: </b>Syntax and semantics, Object-oriented programming, Multi-threading, Parallel computing, Windows Forms Applications, working with multimedia (images, videos, sounds) etc.
                             </p>
 
-                            <p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com/examples/carousel/#" role="button">My C# projects</a></p>
+                            <p><a class="btn btn-lg btn-default btn-block" href="http://getbootstrap.com/examples/carousel/#" role="button">My C# and .NET projects</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="HTML_CSS" class="carousel slide noMargin" data-ride="carousel">
+            <!-- Indicators -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="./resources/images/ca_blue.png" alt="Second slide">
+                    <div class="container">
+                        <div class="carousel-caption">
+                            <h1>HTML and CSS</h1>
+                            <h5>Highly profficient / Expert</h5>
+                            <p>I've been working in HTML and CSS since 2014. and I've become very profficient in using it. I keep up to date with latest developments in HTML and CSS. I'm interested and I enjoy UI design and Frontend development overall. Since 2015. I've been learning how to use Bootstrap framework. I've made a few websites, both simple and complex, using only pure HTML and CSS with graphical assets made in Photoshop. I am very profficient in using Photoshop for generating CSS for designed elements.
+                            </p>
+                            <p>
+                                <b>Knowledge span: </b> Syntax and semantics of tags, HTML5, CSS3, Frontend development, UI design, Bootstrap, Website design, etc.
+                            </p>
+
+                            <p><a class="btn btn-lg btn-primary btn-block" href="http://getbootstrap.com/examples/carousel/#" role="button">My HTML and CSS projects</a></p>
                         </div>
                     </div>
                 </div>
@@ -276,7 +301,7 @@ Basic / Familiar
         </div>
     </div><!-- /.container -->
                     <!-- Bootstrap core JavaScript
-                                                                                                                                        ================================================== -->
+                                                                                                                                                                ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
