--- a/skills.html
+++ b/skills.html
@@ -216,6 +216,8 @@ Basic / Familiar
                             <li><b>Highly motivated for work and learning new skills</b></li>
                             <li><b>Familiar with economics and project management</b></li>
                             <li><b>Good soft-skills and presentation skills</b></li>
+                            <li><b>English language - Highly profficient / Expert level</b></li>
+                            <li><b>Hungarian language - Basic / Familiar level</b></li>
                         </ul>
                     </div>
                 </div>
@@ -232,14 +234,14 @@ Basic / Familiar
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>C and C++</h1>
-                            <h5>Highly profficient / Expert</h5>
-                            <p>I am highly familiar with C / C++ programming language. I've been studying it since highschool. I've used it mostly during my education for doing homework and lab reports for writing code ranging from simple to moderately complex. Currently, I am writing a student handbook on programming in C / C++ and Windows Forms C# for Faculty Of Electric Engineering in Osijek.
+                            <h5>Highly profficient / Expert</h5><hr>
+                            <p>I am highly familiar with C / C++ programming language. I've been studying it since highschool. I've used it mostly during my education for writing code ranging from simple to moderately complex. Currently, I am writing a student handbook on programming in C / C++ and C# for Faculty Of Electric Engineering in Osijek.
                             </p>
                             <p>
-                                <b>Knowledge span: </b>Basic syntax and semantics, Data types, Inputs and outputs, Loops, Decision-making, Various algorithms, Threading, File input / output, Object-oriented programming (Classes, objects, inheritance, overloading), etc.
+                                <b>Knowledge span: </b>Syntax and semantics, Data types, Data I/O, Loops, Decision-making, Various algorithms, Threading, File I/O, Object-oriented programming (Classes, objects, inheritance, overloading), etc.
                             </p>
 
-                            <p><a class="btn btn-lg btn-primary btn-block" href="http://getbootstrap.com/examples/carousel/#" role="button">My C / C++ projects</a></p>
+                            <p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com/examples/carousel/#" role="button">My C / C++ projects</a></p>
                         </div>
                     </div>
                 </div>
@@ -254,14 +256,14 @@ Basic / Familiar
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>C# and .NET Framework</h1>
-                            <h5>Highly profficient / Expert</h5>
-                            <p>I am highly familiar with C# programming language and I am profficient with .NET framework. I've been studying it since 2013. I've used it to create both simple and complex desktop applications, for example: IP camera manager, application for my project "Foodly", histogram-based image search application, etc.
+                            <h5>Highly profficient / Expert</h5><hr>
+                            <p>I am highly familiar with C# programming language and I am profficient with .NET framework. I've been studying it since 2013. I've used it to create both simple and complex desktop applications, for example: IP camera manager, application for "Foodly", histogram-based image search, etc.
                             </p>
                             <p>
                                 <b>Knowledge span: </b>Syntax and semantics, Object-oriented programming, Multi-threading, Parallel computing, Windows Forms Applications, working with multimedia (images, videos, sounds) etc.
                             </p>
 
-                            <p><a class="btn btn-lg btn-default btn-block" href="http://getbootstrap.com/examples/carousel/#" role="button">My C# and .NET projects</a></p>
+                            <p><a class="btn btn-lg btn-default" href="http://getbootstrap.com/examples/carousel/#" role="button">My C# and .NET projects</a></p>
                         </div>
                     </div>
                 </div>
@@ -276,14 +278,14 @@ Basic / Familiar
                     <div class="container">
                         <div class="carousel-caption">
                             <h1>HTML and CSS</h1>
-                            <h5>Highly profficient / Expert</h5>
-                            <p>I've been working in HTML and CSS since 2014. and I've become very profficient in using it. I keep up to date with latest developments in HTML and CSS. I'm interested and I enjoy UI design and Frontend development overall. Since 2015. I've been learning how to use Bootstrap framework. I've made a few websites, both simple and complex, using only pure HTML and CSS with graphical assets made in Photoshop. I am very profficient in using Photoshop for generating CSS for designed elements.
+                            <h5>Highly profficient / Expert</h5><hr>
+                            <p>I've been working in HTML and CSS since 2014. and I've become very profficient in using it. I keep up to date with latest developments in HTML and CSS and Bootstrap framework. I'm interested and I enjoy UI design and Frontend development overall. I've made a few websites, both simple and complex, using only HTML and CSS with assets made in Photoshop. I am very profficient in using Photoshop for generating CSS for designed elements.
                             </p>
                             <p>
                                 <b>Knowledge span: </b> Syntax and semantics of tags, HTML5, CSS3, Frontend development, UI design, Bootstrap, Website design, etc.
                             </p>
 
-                            <p><a class="btn btn-lg btn-primary btn-block" href="http://getbootstrap.com/examples/carousel/#" role="button">My HTML and CSS projects</a></p>
+                            <p><a class="btn btn-lg btn-primary" href="http://getbootstrap.com/examples/carousel/#" role="button">My HTML and CSS projects</a></p>
                         </div>
                     </div>
                 </div>
