--- a/skills.html
+++ b/skills.html
@@ -92,7 +92,7 @@
                         </div>
 
                         <div class="col-md-4">
-                            <h5><a href="#">PHP</a></h5>
+                            <h5><a id="a_PHP_lang">PHP</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
  Profficient
@@ -101,7 +101,7 @@
                         </div>
 
                         <div class="col-md-4">
-                            <h5><a href="#">MySQL and Databases</a></h5>
+                            <h5><a id="a_MySQL_DB">MySQL and Databases</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 55%;">
 Familiar
@@ -110,7 +110,7 @@ Familiar
                         </div>
 
                         <div class="col-md-4">
-                            <h5><a href="#">Matlab</a></h5>
+                            <h5><a id="a_Matlab">Matlab</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
  Profficient
@@ -191,7 +191,7 @@ Familiar
                                 <h5><a href="#">Industrial coding (VHDL & Step7)</a></h5>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-Familiar
+Highly Proficient
                                     </div>
                                 </div>
                             </div>
@@ -206,10 +206,10 @@ Familiar
                             </div>
 
                             <div class="col-md-4">
-                                <h5><a href="#">Game design</a></h5>
+                                <h5><a href="#">Game design and development</a></h5>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
-Basic / Familiar
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+Familiar
                                     </div>
                                 </div>
                             </div>
@@ -226,8 +226,8 @@ Expert
                             <div class="col-md-4">
                                 <h5><a href="#">Electronics knowledge</a></h5>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-Very Familiar / Profficient
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+Familiar
                                     </div>
                                 </div>
                             </div>
@@ -340,6 +340,7 @@ Very Familiar / Profficient
                     <b>Knowledge span: </b>
                     <ul>
                         <li>Syntax and Semantics of Javscript and JQuery</li>
+                        <li>Form valiadtion, data validation, etc.</li>
                         <li>Animations, Toggling, Scrolling, Sliding, etc.</li>
                         <li>Changing content of an HTML element</li>
                         <li>etc.</li>
@@ -354,6 +355,75 @@ Very Familiar / Profficient
         </div>
 
         
+        <div class="container-full container-blue" id="PHP_lang">
+            <h2>PHP</h2>
+            <h5>Profficient</h5><hr>
+            <p>I've been working with PHP since 2014 and I've mostly used it to connect to the MySQL database and store data into it. I've used PHP to make: login pages, various interactions with databases, storing data, fetching data, etc. 
+            </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <b>Knowledge span: </b>
+                    <ul>
+                        <li>Basic Sytax and Semantics</li>
+                        <li>Connection to MySQL databases</li>
+                        <li>Interaction with data in MySQL databases</li>
+                        <li>etc.</li>
+                    </ul>
+                </div>
+                <div class="col-md-4"><h5>View my projects:</h5>
+                    <p><a class="btn btn-lg btn-default" href="#" role="button">PHP Projects>></a></p>
+                    <div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-full container-gray" id="MySQL_DB">
+            <h2>MySQL and Databases</h2>
+            <h5>Familiar</h5></h5><hr>
+            <p>I've used MySQL and Databases alongside PHP to fetch and store data. I am familiar with creating, optimizing and maintaining a small-scale to medium-scale database and data stored in it.
+            </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <b>Knowledge span: </b>
+                    <ul>
+                        <li>Basic syntax and semantics of MySQL</li>
+                        <li>Storing and fetching data</li>
+                        <li>Database optimiziation and maintenance</li>
+                        <li>etc.</li>
+                    </ul>
+                </div>
+                <div class="col-md-4"><h5>View my projects:</h5>
+                    <p><a class="btn btn-lg btn-default" href="#" role="button">Javascript & JQuery Projects >></a></p>
+                    <div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-full container-blue" id="Matlab">
+            <h2>Matlab</h2>
+            <h5>Profficient</h5><hr>
+            <p>I've been working with Matlab since 2012. and I've used it for various educational purposes: signal processing, image processing, automatics, sonar computing, robotics, computer vision, etc. I am profficient with writing m-files (Matlab script files) and system modeling. 
+            </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <b>Knowledge span: </b>
+                    <ul>
+                        <li>Basic Matlab Sytax and Semantics</li>
+                        <li>Writing m-files and scripts</li>
+                        <li>System modeling with Simulink</li>
+                        <li>Using Matlab in various fields of science</li>
+                        <li>etc.</li>
+                    </ul>
+                </div>
+                <div class="col-md-4"><h5>View my projects:</h5>
+                    <p><a class="btn btn-lg btn-default" href="#" role="button">PHP Projects>></a></p>
+                    <div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="container marketing">
             <!-- /END THE FEATURETTES -->
