--- a/skills.html
+++ b/skills.html
@@ -3,6 +3,9 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
+        <meta name="robots" content="NOODP,NOYDIR">
+        <meta name="keywords" content="Adrian, Bece, HTML , CSS, C#, C++ , C, Cpp, Osijek, Job, Programmer, Frontend, Backend, Matlab, Robotics, Computer Vision">
+        <meta name="author" content="Adrian Bece">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Adrian Bece's portfolio - Codes and Designs. Programming languages: C, C++, C#, .NET, HTML, CSS, PHP, Javascript, JQuery, Bootstrap, Matlab, VHDL, Step7, Computer vision, Robotics, Wireframing, etc. Graphic designs and animations in Photoshop.">
@@ -119,7 +122,7 @@ Familiar
                         </div>
 
                         <div class="col-md-4">
-                            <h5><a href="#">ASP .NET MVC</a></h5>
+                            <h5><a id="a_ASP_MVC">ASP .NET MVC</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
  Familiar
@@ -128,7 +131,7 @@ Familiar
                         </div>
 
                         <div class="col-md-4">
-                            <h5><a href="#">Frontend development</a></h5>
+                            <h5><a id="a_frontend">Frontend development</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
  Highly Profficient
@@ -137,7 +140,7 @@ Familiar
                         </div>
 
                         <div class="col-md-4">
-                            <h5><a href="#">Backend development</a></h5>
+                            <h5><a id="a_backend">Backend development</a></h5>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
  Profficient
@@ -153,7 +156,7 @@ Familiar
                     <div class="list-group" id="proLangRel_group">
                         <div class="row">
                             <div class="col-md-4">
-                                <h5><a href="#">Graphics Design (Photoshop)</a></h5>
+                                <h5><a class="a_programming_related">Graphics Design (Photoshop)</a></h5>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
  Highly Profficient / Expert
@@ -162,7 +165,7 @@ Familiar
                             </div>
 
                             <div class="col-md-4">
-                                <h5><a href="#">Wireframing (Balsamiq Mockups)</a></h5>
+                                <h5><a class="a_programming_related">Wireframing (Balsamiq Mockups)</a></h5>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
  Profficient
@@ -171,7 +174,7 @@ Familiar
                             </div>
 
                             <div class="col-md-4">
-                                <h5><a href="#">Github / SVN</a></h5>
+                                <h5><a class="a_programming_related">Github / SVN</a></h5>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
 Familiar
@@ -418,12 +421,102 @@ Familiar
                     </ul>
                 </div>
                 <div class="col-md-4"><h5>View my projects:</h5>
-                    <p><a class="btn btn-lg btn-default" href="#" role="button">PHP Projects>></a></p>
+                    <p><a class="btn btn-lg btn-default" href="#" role="button">Matlab Projects>></a></p>
                     <div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="container-full container-gray" id="ASP_MVC">
+            <h2>ASP .NET MVC</h2>
+            <h5>Familiar</h5></h5><hr>
+            <p>I've started working with ASP .NET MVC in January 2015. I am familiar with basic syntax, semantics and functionalities of ASP .NET MVC. At the moment, I am working on a project for Microsoft's Imagine Cup using ASP .NET MVC framework along with C#, HTML, CSS and Bootstrap.
+            </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <b>Knowledge span: </b>
+                    <ul>
+                        <li>Basic syntax and semantics of ASP .NET MVC</li>
+                        <li>Creating models</li>
+                        <li>Scaffolding and creating controls</li>
+                        <li>Editing HTML and CSS</li>
+                        <li>Frontend development and design</li>
+                        <li>etc.</li>
+                    </ul>
+                </div>
+                <div class="col-md-4"><h5>View my projects:</h5>
+                    <p><a class="btn btn-lg btn-default" href="#" role="button">ASP .NET MVC Projects >></a></p>
+                    <div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container-full container-blue" id="frontend_dev">
+            <h2>Frontend Development</h2>
+            <h5>Highly profficient</h5><hr>
+            <p>I enjoy creating interesting and functional UI and website's frontend. With my current knowledge of HTML, CSS, Javascript, JQuery, Bootstrap and Design I am able to create visually appealing and stylish websites ranging from professional websites to quirky websites. Also, I am interested in frontend development of applications and UI and making them both functional and visually appealing. 
+            </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <b>Knowledge span: </b>
+                    <ul>
+                        <li>HTML, CSS, Javascript, JQuery, Bootstrap</li>
+                        <li>Graphic design</li>
+                        <li>Adobe Photoshop</li>
+                        <li>Windows Forms</li>
+                        <li>etc.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+                <div class="container-full container-gray" id="backend_dev">
+            <h2>Backend development</h2>
+            <h5>Profficient</h5></h5><hr>
+            <p>Alongside with Frontend development, I enjoy backend development and writing high-quality and fast algorithms using various techniques like multithreading and parallel programming. I am familiar with some existing and widely-used algorithms. This is one of the fields which I'd like to learn more about and expand my existing knowledge.
+            </p>
+            <div class="row">
+                <div class="col-md-8">
+                    <b>Knowledge span: </b>
+                    <ul>
+                        <li>Programming languages C, C++, C# and PHP</li>
+                        <li>Common and widely-used Algorithms</li>
+                        <li>Multi-threading, parallel programming, etc.</li>
+                        <li>Motivation to expand my current knowledge</li>
+                        <li>etc.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+<!-- Programming languages end -->
+        <div class="container-full container-circles" id="programming_related">
+            <div class="row">
+                <div class="col-lg-4">
+                    <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                    <h2>Graphical Design</h2>
+                    <h5>Highly profficient / Expert</h5>
+                    <p class="skills-text">I've been doing graphic designs in Adobe Photoshop since 2009. and I've became very profficient using it for making graphic assets for applications and websites, artistic works, CD covers, posters, etc. Since 2013. I've been doing basic animations and complex designs for applications and websites.</p>
+                    <p><a class="btn btn-primary" href="#" role="button">My graphic designs and projects »</a></p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                    <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                    <h2>Wireframing</h2>
+                   <h5>Profficient</h5>
+                    <p class="skills-text">I've learned the importance of wireframing in 2014. and I've been doing it ever since for both websites and desktop applications using Balsamiq Mockups. As a result of doing the wireframing before the start of the project, I've became profficent in wireframing and planning.</p>
+                </div><!-- /.col-lg-4 -->
+                <div class="col-lg-4">
+                    <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                    <h2>Github / SVN</h2>
+                    <h5>Familiar</h5>
+                    <p class="skills-text">I've been using GitHub on some occasions since 2014. and I've became familiar with it and it's importance in development. I've used SVN (TortoiseSVN) back on the game project that I've worked on in 2011. </p>
+                </div><!-- /.col-lg-4 -->
+            </div><!-- /.row -->
+</div>
+
 
         <div class="container marketing">
             <!-- /END THE FEATURETTES -->
