--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)http://getbootstrap.com/examples/carousel/ -->
 <html lang="en">
     <head>
+
+        <!-- Facebook meta info -->
+        <meta property="og:title" content="Adrian Bece's Online Portfolio">
+        <meta property="og:image" content="TODO">
+        <meta property="og:site_name" content="Code Adrian">
+        <meta property="og:description" content="Adrian Bece's online portfolio of his work in both programming and design. You can check out his programming knowledge and experience and projects he has worked on.">
+        <!-- Facebook meta info end -->
+
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="utf-8">
+        <meta name="robots" content="NOODP,NOYDIR">
+        <meta name="keywords" content="Adrian, Bece, HTML , CSS, C#, C++ , C, Cpp, Osijek, Job, Programmer, Frontend, Backend, Matlab, Robotics, Computer Vision">
+        <meta name="author" content="Adrian Bece">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Adrian Bece's work portfolio - C#, C++, HTML, CSS, Javascript, PHP, Javascript">
+        <meta name="description" content="Adrian Bece's portfolio - Codes and Designs. Programming languages: C, C++, C#, .NET, HTML, CSS, PHP, Javascript, JQuery, Bootstrap, Matlab, VHDL, Step7, Computer vision, Robotics, Wireframing, etc. Graphic designs and animations in Photoshop.">
         <meta name="author" content="Adrian Bece">
         <link rel="icon" href="./resources/images/ca_icon.png">
         <title>Code Adrian - Adrian Bece's Online Portfolio</title>
@@ -18,14 +28,14 @@
         <style type="text/css"></style>
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
                     <!--[if lt IE 9]>
-                  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-                  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-                <![endif]-->
+                              <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+                              <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+                            <![endif]-->
         <!-- Custom styles for this template -->
         <link href="./bootstrap-3.3.2-dist/css/carousel.css" rel="stylesheet">
     </head>
             <!-- NAVBAR
-        ================================================== -->
+                ================================================== -->
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
@@ -51,16 +61,16 @@
         </nav>
 
                     <!-- Carousel
-                ================================================== -->
-<div class="jumbotron">
-    <div class="container">
-    <h3>Adrian Bece</h3>
-    <h4 class="text-muted">Online portfolio - Coding & Design</h4><hr class="hr_gray"/>
-        <p></p>
-    </div>
-</div>
+                            ================================================== -->
+        <div class="jumbotron">
+            <div class="container">
+                <h3>Adrian Bece</h3>
+                <h4 class="text-muted">Online portfolio - Coding & Design</h4><hr class="hr_gray" />
+                <p></p>
+            </div>
+        </div>
                     <!-- Marketing messaging and featurettes
-                ================================================== -->
+                            ================================================== -->
         <!-- Wrap the rest of the page in another container to center all the content. -->
         <div class="container marketing">
             <!-- Three columns of text below the carousel -->
@@ -126,7 +136,7 @@
             </footer>
         </div><!-- /.container -->
                     <!-- Bootstrap core JavaScript
-                ================================================== -->
+                            ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="./index_files/jquery.min.js"></script>
         <script src="./index_files/bootstrap.min.js"></script>
