--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
-        <meta property="og:image" content="TODO">
+        <meta property="og:image" content="./resources/images/ca_fb_logo.jpg">
         <meta property="og:site_name" content="Code Adrian">
         <meta property="og:description" content="Adrian Bece's online portfolio of his work in both programming and design. You can check out his programming knowledge and experience and projects he has worked on.">
         <!-- Facebook meta info end -->
@@ -54,7 +54,7 @@
                         <li><a href="./skills.html">Skills</a></li>
                         <li><a href="./projects.html">Projects</a></li>
                         <li><a href="./designs">Designs</a></li>
-                        <li><a href="./contact">Contact me</a></li>
+                        <li><a href="./contact">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
