--- a/skills.html
+++ b/skills.html
@@ -42,7 +42,7 @@
                         <li class="active"><a id="a_skills_top">Skills</a></li>
                         <li><a href="./projects.html">Projects</a></li>
                         <li><a href="./designs">Designs</a></li>
-                        <li><a href="./contact">Contact me</a></li>
+                        <li><a href="./contact">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -259,7 +259,7 @@ Familiar
             </div>
         </div>
 
-        <div class="container-full container-blue" id="C_Cpp">
+        <div class="container-full container-blue" id="box_C_Cpp">
             <h2>C and C++</h2>
             <h5>Highly profficient / Expert</h5><hr>
             <p>I am highly familiar with C / C++ programming language. I've been studying it since highschool. I've used it mostly during my education for writing code ranging from simple to moderately complex. Currently, I am writing a student handbook on programming in C / C++ and C# for Faculty Of Electric Engineering in Osijek.
@@ -283,7 +283,7 @@ Familiar
             </div>
         </div>
 
-        <div class="container-full container-gray" id="Csharp">
+        <div class="container-full container-gray" id="box_Csharp">
             <h2>C# and .NET Framework</h2>
             <h5>Highly profficient / Expert</h5><hr>
             <p>I am highly familiar with C# programming language and I am profficient with .NET framework. I've been studying it since 2013. I've used it to create both simple and complex desktop applications, for example: IP camera manager, application for "Foodly", histogram-based image search, Image to ASCII converter, Image and video filters, etc.
@@ -308,7 +308,7 @@ Familiar
             </div>
         </div>
 
-        <div class="container-full container-blue" id="HTML_CSS">
+        <div class="container-full container-blue" id="box_HTML_CSS">
             <h2>HTML and CSS</h2>
             <h5>Highly profficient / Expert</h5><hr>
             <p>I've been working in HTML and CSS since 2014. and I've become very profficient in using it. I keep up to date with latest developments in HTML and CSS and Bootstrap framework. I'm interested and I enjoy UI design and Frontend development overall. I've made a few websites, both simple and complex, using only HTML and CSS with assets made in Photoshop. I am very profficient in using Photoshop for generating CSS for designed elements.
@@ -333,7 +333,7 @@ Familiar
             </div>
         </div>
 
-        <div class="container-full container-gray" id="JS_JQ">
+        <div class="container-full container-gray" id="box_JS_JQ">
             <h2>Javascript and JQuery</h2>
             <h5>Profficient</h5><hr>
             <p>I've used Javascript and jQuery for frontend development and website design alongside with HTML and CSS. I am familiar with basic syntax and semantics of Javascript and JQuery - animations, changing content of an HTML element, toggling, etc.
@@ -495,25 +495,29 @@ Familiar
 <!-- Programming languages end -->
         <div class="container-full container-circles" id="programming_related">
             <div class="row">
+
                 <div class="col-lg-4">
-                    <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                    <img class="img-circle" src="./resources/images/ca_circle_design.png" alt="Design icon" style="width: 140px; height: 140px;">
                     <h2>Graphical Design</h2>
                     <h5>Highly profficient / Expert</h5>
                     <p class="skills-text">I've been doing graphic designs in Adobe Photoshop since 2009. and I've became very profficient using it for making graphic assets for applications and websites, artistic works, CD covers, posters, etc. Since 2013. I've been doing basic animations and complex designs for applications and websites.</p>
                     <p><a class="btn btn-primary" href="#" role="button">My graphic designs and projects »</a></p>
-                </div><!-- /.col-lg-4 -->
+                </div>
+
                 <div class="col-lg-4">
-                    <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                    <img class="img-circle" src="./resources/images/ca_circle_wireframing.png" alt="Wireframing icon" style="width: 140px; height: 140px;">
                     <h2>Wireframing</h2>
                    <h5>Profficient</h5>
                     <p class="skills-text">I've learned the importance of wireframing in 2014. and I've been doing it ever since for both websites and desktop applications using Balsamiq Mockups. As a result of doing the wireframing before the start of the project, I've became profficent in wireframing and planning.</p>
-                </div><!-- /.col-lg-4 -->
+                </div>
+
                 <div class="col-lg-4">
-                    <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+                    <img class="img-circle" src="./resources/images/ca_circle_svn.png" alt="SVN icon" style="width: 140px; height: 140px;">
                     <h2>Github / SVN</h2>
                     <h5>Familiar</h5>
                     <p class="skills-text">I've been using GitHub on some occasions since 2014. and I've became familiar with it and it's importance in development. I've used SVN (TortoiseSVN) back on the game project that I've worked on in 2011. </p>
-                </div><!-- /.col-lg-4 -->
+                </div>
+
             </div><!-- /.row -->
 </div>
 
@@ -542,5 +546,7 @@ Familiar
             <embed src="/assets/flash/ZeroClipboard.swf?noCache=1426339452602" loop="false" menu="false" quality="best" bgcolor="#ffffff" width="100%" height="100%" name="global-zeroclipboard-flash-bridge" allowscriptaccess="sameDomain" allowfullscreen="false" type="application/x-shockwave-flash" wmode="transparent" pluginspage="http://www.macromedia.com/go/getflashplayer" flashvars="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com" scale="exactfit">                </object>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewbox="0 0 500 500" preserveaspectratio="none" style="visibility: hidden; position: absolute; top: -100%; left: -100%;"><defs></defs><text x="0" y="23" style="font-weight:bold;font-size:23pt;font-family:Arial, Helvetica, Open Sans, sans-serif;dominant-baseline:middle">500x500</text></svg>
+   
+       
     </body>
 </html>
