005 Nav and CSS
edited the Nav and modified CSS

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="./index.html">About me</a></li>
-                        <li><a href="./skills.html">Skills</a></li>
-                        <li><a href="./projects.html">Projects</a></li>
-                        <li><a href="./designs">Designs</a></li>
-                        <li><a href="./contact">Contact</a></li>
+                        <li class="active"><a href="./index.html"><span class="glyphicon glyphicon-user myglyph" aria-hidden="true"></span>About me</a></li>
+                        <li><a href="./skills.html"><span class="glyphicon glyphicon-education myglyph" aria-hidden="true"></span>Skills</a></li>
+                        <li><a href="./projects.html"><span class="glyphicon glyphicon-briefcase myglyph" aria-hidden="true"></span>Projects</a></li>
+                        <li><a href="./designs"><span class="glyphicon glyphicon-picture myglyph" aria-hidden="true"></span>Designs</a></li>
+                        <li><a href="./contact"><span class="glyphicon glyphicon-earphone myglyph" aria-hidden="true"></span>Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
