--- a/skills.html
+++ b/skills.html
@@ -24,9 +24,8 @@
 
     <!-- ---------- NAVBAR ----------  -->
     <body>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
-
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
@@ -38,11 +37,11 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="./index.html">About me</a></li>
-                        <li class="active"><a id="a_skills_top">Skills</a></li>
-                        <li><a href="./projects.html">Projects</a></li>
-                        <li><a href="./designs">Designs</a></li>
-                        <li><a href="./contact">Contact</a></li>
+                        <li><a href="./index.html"><span class="glyphicon glyphicon-user myglyph" aria-hidden="true"></span>About me</a></li>
+                        <li class="active"><a id="a_skills_top"><span class="glyphicon glyphicon-education myglyph" aria-hidden="true"></span>Skills</a></li>
+                        <li><a href="./projects.html"><span class="glyphicon glyphicon-briefcase myglyph" aria-hidden="true"></span>Projects</a></li>
+                        <li><a href="./designs"><span class="glyphicon glyphicon-picture myglyph" aria-hidden="true"></span>Designs</a></li>
+                        <li><a href="./contact"><span class="glyphicon glyphicon-earphone myglyph" aria-hidden="true"></span>Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
