007 CSS and Nav
Fixed nav and modified CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <!-- Facebook meta info -->
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
-        <meta property="og:image" content="./resources/images/ca_fb_logo.jpg">
+        <meta property="og:image" content="http://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
         <meta property="og:site_name" content="Code Adrian">
         <meta property="og:description" content="Adrian Bece's online portfolio of his work in both programming and design. You can check out his programming knowledge and experience and projects he has worked on.">
         <!-- Facebook meta info end -->
