--- a/skills.html
+++ b/skills.html
@@ -473,7 +473,7 @@ Familiar
         </div>
 
                 <div class="container-full container-gray" id="backend_dev">
-            <h2>Backend development</h2>
+            <h2>Backend Development</h2>
             <h5>Profficient</h5></h5><hr>
             <p>Alongside with Frontend development, I enjoy backend development and writing high-quality and fast algorithms using various techniques like multithreading and parallel programming. I am familiar with some existing and widely-used algorithms. This is one of the fields which I'd like to learn more about and expand my existing knowledge.
             </p>
@@ -493,32 +493,37 @@ Familiar
 
 <!-- Programming languages end -->
         <div class="container-full container-circles" id="programming_related">
+            <h1>Programming-related Skills</h1>
+            <br/>
             <div class="row">
-
                 <div class="col-lg-4">
                     <img class="img-circle" src="./resources/images/ca_circle_design.png" alt="Design icon" style="width: 140px; height: 140px;">
                     <h2>Graphical Design</h2>
                     <h5>Highly profficient / Expert</h5>
+                                <hr>
                     <p class="skills-text">I've been doing graphic designs in Adobe Photoshop since 2009. and I've became very profficient using it for making graphic assets for applications and websites, artistic works, CD covers, posters, etc. Since 2013. I've been doing basic animations and complex designs for applications and websites.</p>
-                    <p><a class="btn btn-primary" href="#" role="button">My graphic designs and projects »</a></p>
+                    <p><a class="btn btn-primary" href="#" role="button">My graphic designs and projects »</a><br/><br/></p>
                 </div>
 
                 <div class="col-lg-4">
                     <img class="img-circle" src="./resources/images/ca_circle_wireframing.png" alt="Wireframing icon" style="width: 140px; height: 140px;">
                     <h2>Wireframing</h2>
                    <h5>Profficient</h5>
-                    <p class="skills-text">I've learned the importance of wireframing in 2014. and I've been doing it ever since for both websites and desktop applications using Balsamiq Mockups. As a result of doing the wireframing before the start of the project, I've became profficent in wireframing and planning.</p>
+                                <hr>
+                    <p class="skills-text">I've learned the importance of wireframing in 2014. and I've been doing it ever since for both websites and desktop applications using Balsamiq Mockups. As a result of doing the wireframing before the start of the project, I've became profficent in wireframing and planning.<br/><br/></p>
                 </div>
 
                 <div class="col-lg-4">
                     <img class="img-circle" src="./resources/images/ca_circle_svn.png" alt="SVN icon" style="width: 140px; height: 140px;">
                     <h2>Github / SVN</h2>
                     <h5>Familiar</h5>
-                    <p class="skills-text">I've been using GitHub on some occasions since 2014. and I've became familiar with it and it's importance in development. I've used SVN (TortoiseSVN) back on the game project that I've worked on in 2011. </p>
+                                <hr>
+                    <p class="skills-text">I've been using GitHub on some occasions since 2014. and I've became familiar with it and it's importance in development. I've used SVN (TortoiseSVN) back on the game project that I've worked on in 2011. <br/><br/></p>
                 </div>
 
             </div><!-- /.row -->
 </div>
+        
 
 
         <div class="container marketing">
