--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="Adrian Bece's Online Portfolio">
         <meta property="og:image" content="http://codeadrian.github.io/resources/images/ca_fb_logo.jpg">
         <meta property="og:site_name" content="Code Adrian">
-        <meta property="og:description" content="Adrian Bece's online portfolio of his work in both programming and design. You can check out his programming knowledge and experience and projects he has worked on.">
+        <meta property="og:description" content="Adrian Bece's online portfolio and project showcase. Programming, design, science, robotics, computer vision and more.">
         <!-- Facebook meta info end -->
 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -144,10 +144,5 @@
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="./index_files/ie10-viewport-bug-workaround.js"></script>
 
-        <div id="global-zeroclipboard-html-bridge" class="global-zeroclipboard-container" style="position: absolute; left: 0px; top: -9999px; width: 15px; height: 15px; z-index: 999999999;" title="" data-original-title="Copy to clipboard">
-            <param name="movie" value="/assets/flash/ZeroClipboard.swf?noCache=1426339452602">         <param name="allowScriptAccess" value="sameDomain">         <param name="scale" value="exactfit">         <param name="loop" value="false">         <param name="menu" value="false">         <param name="quality" value="best">         <param name="bgcolor" value="#ffffff">         <param name="wmode" value="transparent">         <param name="flashvars" value="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com">
-            <embed src="/assets/flash/ZeroClipboard.swf?noCache=1426339452602" loop="false" menu="false" quality="best" bgcolor="#ffffff" width="100%" height="100%" name="global-zeroclipboard-flash-bridge" allowscriptaccess="sameDomain" allowfullscreen="false" type="application/x-shockwave-flash" wmode="transparent" pluginspage="http://www.macromedia.com/go/getflashplayer" flashvars="trustedOrigins=getbootstrap.com%2C%2F%2Fgetbootstrap.com%2Chttp%3A%2F%2Fgetbootstrap.com" scale="exactfit">                </object>
-        </div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewbox="0 0 500 500" preserveaspectratio="none" style="visibility: hidden; position: absolute; top: -100%; left: -100%;"><defs></defs><text x="0" y="23" style="font-weight:bold;font-size:23pt;font-family:Arial, Helvetica, Open Sans, sans-serif;dominant-baseline:middle">500x500</text></svg>
     </body>
 </html>
