--- a/projects.html
+++ b/projects.html
@@ -195,9 +195,9 @@
 
                         <div class="row">
                             <h4>Screenshots: </h4>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Easy Mode"><img src="./projects/images/hex_01.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Advanced Mode"><img src="./projects/images/hex_03.JPG" class="thumbnail img-responsive"></a></div>
-                            <div class="col-lg-3"><a class="lightbox-a" title="Free jam"><img src="./projects/images/hex_02.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Easy Mode"><img src="./projects/images/Hex_01.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Simon Says - Advanced Mode"><img src="./projects/images/Hex_03.JPG" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Free jam"><img src="./projects/images/Hex_02.JPG" class="thumbnail img-responsive"></a></div>
                         </div>
                     </div>
                 </div>
@@ -282,7 +282,7 @@
                     <hr />
                     <div class="col-lg-2">
                         <h4>Basic info: </h4>
-                        <p><b>Created on:</b><br />2014.</p>
+                        <p><b>Created on:</b><br />2014. / 2015.</p>
                         <p><b>Technology:</b><br />C#, MySQL .NET Connector</p>
                         <p><b>Software:</b><br />Visual Studio, Adobe Photoshop, XAMPP</p>
                         <p><b>Project:</b></p>
@@ -303,6 +303,39 @@
                     </div>
                 </div>
             </div>
+
+
+<div class="container-full container-gray">
+                <div class="row">
+                    <h2>Foodly Website</h2>
+                    <h5>Project for Software Startup Academy 2014./2015.</h5>
+                    <hr />
+                    <div class="col-lg-2">
+                        <h4>Basic info: </h4>
+                        <p><b>Created on:</b><br />2014. / 2015.</p>
+                        <p><b>Technology:</b><br />HTML, CSS, Javascript, JQuery, PHP, MySQL</p>
+                        <p><b>Software:</b><br />Microsoft Expression, Adobe Photoshop, XAMPP</p>
+                        <p><b>Project:</b></p>
+                        <p><a class="btn btn-primary" href="#" role="button">Github link »</a></p>
+                        <br />
+                    </div>
+
+                    <div class="col-lg-10">
+                        <h4>Details: </h4>
+                        <p>"Foodly" is one of my most versatile and challenging projects so far. "Foodly" is a system for ordering personalized food online from various restaurants. Web site is not complete and I'm planning to recreate the website in ASP .NET or just use Bootstrap to improve it's quality to today's standards. Website features location-based restaurant picker, Pizza and Hamburger editor for order personalization and a custom-made webshop for online food ordering.</p>
+
+                        <div class="row">
+                            <h4>Screenshots: </h4>
+                             <div class="col-lg-3"><a class="lightbox-a" title="Restaurant picker"><img src="./projects/images/FoodlyWeb_03.gif" class="thumbnail img-responsive"></a></div>
+                                                        <div class="col-lg-3"><a class="lightbox-a" title="Webshop"><img src="./projects/images/FoodlyWeb_02.gif" class="thumbnail img-responsive"></a></div>
+                            <div class="col-lg-3"><a class="lightbox-a" title="Pizza Customization"><img src="./projects/images/FoodlyWeb_01.gif" class="thumbnail img-responsive"></a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
             <div class="container marketing">
                 <!-- /END THE FEATURETTES -->
                 <!-- FOOTER -->
